--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <h1>Catnip</h1>
   <p>Welcome to my website!</p>
   <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
-  <h2>That icecream kinda slick with it<h2>
+  <p>That icecream kinda slick with it<p>
 </body>
  
 </html>
