--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <html>
  
 <body>
-  <h1>Catnip</h1>
+  <h1>Catnip's Corner</h1>
   <p>Welcome to my website!</p>
   <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
   <p>That icecream kinda slick with it<p>
+
+ <h5>tiny text here that i'll make blue once i figure out how to add CSS</h5>
 </body>
  
 </html>
